# jibouj

./: README.md
projet_jibouji/: CMakeLists.txt  build.sh
projet_jibouji/docs/: project_structure_help.md
projet_jibouji/exemples/: exemples.md
projet_jibouji/lib/read_wave/: read_wave.cpp  read_wave.h
projet_jibouji/src/: main.cpp
